set(SOURCE parser.y)
set(PARSER_NAME parser)
set(SYNTAX_OBJ syntax_obj)
add_custom_command(
    OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/${PARSER_NAME}.hpp ${CMAKE_CURRENT_SOURCE_DIR}/${PARSER_NAME}.cpp
    COMMAND bison -d -o "${CMAKE_CURRENT_SOURCE_DIR}/${PARSER_NAME}.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE}"
    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE}
)
add_custom_target(my ALL
    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${PARSER_NAME}.hpp ${CMAKE_CURRENT_SOURCE_DIR}/${PARSER_NAME}.cpp
)

add_library(${SYNTAX_OBJ} "${CMAKE_CURRENT_SOURCE_DIR}/${PARSER_NAME}.cpp")

set_property(GLOBAL APPEND PROPERTY ${LIB_NAME}_SYNTAX_DEPS $<TARGET_OBJECTS:${SYNTAX_OBJ}>)